# zenote

./: deno.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  supabase.rs
src-tauri/src/functions/: auth.rs  blocks.rs  embeddings.rs  mod.rs  pages.rs  queries.rs  responses.rs  storage.rs  supabase.rs
src-tauri/src/supabase/: auth.rs  mod.rs  pages.rs  queries.rs  storage.rs  supabase.rs  update.rs
src/components/: Layout.tsx  LoadingCircle.tsx
src/components/auth/: AuthForm.tsx  CustomInput.tsx  LoginHeader.tsx  SignUpForm.tsx
src/components/block/: Block.tsx  BlockSection.tsx  ImageBlock.tsx  NewBlock.tsx  TextBlock.tsx
src/components/chat/: ChatInterface.tsx
src/components/home/: Home.tsx
src/components/home/page/: NewPageButton.tsx  PageSquare.tsx  PageTitle.tsx  Pages.tsx
src/components/home/sidebar/: HoverSidebar.tsx  Sidebar.tsx  SidebarHeader.tsx  SidebarItem.tsx  SidebarPrimaryItems.tsx
src/components/login/: AuthForm.tsx  OAuthButton.tsx  OAuthGroup.tsx
src/components/ui/: MenuButton.tsx
src/constants/: animation.ts  login.ts  statusCode.ts
src/context/: AuthContext.tsx
src/hooks/: useHover.ts  usePage.ts  userPages.ts
src/lib/: jwt.ts
src/pages/: Chat.tsx  Home.tsx  Login.tsx  OnBoarding.tsx  Page.tsx
src/types/: index.d.ts
src/utils/: jwt.ts
