[package]
name = "zenote"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "zenote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
supabase_rs = { version = "0.4.0", features = ["storage"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2"
uuid = { version = "1.11.0", features = ["v4"] }
mime_guess = "2.0.4"
argon2 = "0.5"
password-hash = "0.5"
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
